Adjust layouts to prevent overflow on narrower viewports

--- a/packages/frontend/src/features/AccountDetails/components/Subscriptions/components/SubscriptionProduct/index.module.css
+++ b/packages/frontend/src/features/AccountDetails/components/Subscriptions/components/SubscriptionProduct/index.module.css
@@ -1,15 +1,19 @@
 .subscription-product {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 1fr;
     gap: 16px;
 
     width: 100%;
+
+    @media (min-width: $mantine-breakpoint-xs) {
+        grid-template-columns: auto 1fr;
+    }
 }
 
 .product-thumbnail-image {
     align-self: center;
 
-    width: 120px;
+    width: 240px;
     aspect-ratio: 1;
 
     @media (min-width: $mantine-breakpoint-xs) {
